@startuml

class User {
    -id: Long
    -name: String
    -email: String
    -password: String
    -userToken: String
    -role: String
    +login(String password): boolean
    +getAllUsers(): List<User>
}

class Client {
    -RG: String
    -CPF: String
    -address: String
    -profession: String
    -employer: String
    -NUMBER_OF_SALARIES: int = 3
    -lastSalaries: double[]
    +requestRent(Vehicle vehicle): void
    +modifyRentRequest(Vehicle vehicle): void
    +cancelRentRequest(Vehicle vehicle): void
    +searchRequest(Vehicle vehicle): void
}


class Agent {
    +modifyRentalRequest(Contract contract): Contract
    +analyzeRequest(Contract contract): void
    +issueOpinion(Contract contract, ContractStatus status): void
    +makeContractAvailable(Contract contract): void
    +addConsideration(Contract contract, String consideration): void
}

class Bank {
    +acceptCreditContract(Contract contract): boolean
}

class Contract {
    -id: int
    -client: Client
    -status: ContractStatus
    -considerations: String
    -vehicle: Vehicle
    -value: double
    -startDate: Date
    -endDate: Date
}
 
class CreditContract {
    -id: int
    -credit: double
}

class Vehicle {
    -id: int
    -propertaryId: int
    -registration: String
    -year: int
    -brand: String
    -model: String
    -plate: String
    -status: VehicleStatus
    -owner: User
}

enum ContractStatus {
    PENDING
    APPROVED
    REJECTED
}

enum VehicleStatus {
    AVAILABLE
    RENTED
}

User <|-- Agent
User <|-- Client
User "1" -- "0.." Vehicle
Contract <|-- CreditContract
Client "1" -- "0.." Contract
CreditContract "1" -- "1" Bank
Contract "1" -- "1" Vehicle
Agent <|-- Bank
Agent "1" -- "0..*" Contract
@enduml